@@ -1,5 +1,6 @@
 Version 5.7.0 (TBD)
-    Added video and audio live embed support for the `media` plugin #TINY-6229
+    Added `video` and `audio` live embed support for the `media` plugin #TINY-6229
+    Added the ability to resize `video` and `iframe` media elements #TINY-6229
     Added new `font_css` setting for fonts to be added to both containing document and the editor #TINY-6199
     Added a new `ImageUploader` API to simplify uploading image data to the configured `images_upload_url` or `images_upload_handler` #TINY-4601
     Changed the `lists` plugin to apply list styles to all text blocks within a selection #TINY-3755
